dist/1.0/bin/sample/retrieveUnpackaged/objects/IntegrationComponentAttribute__c.object
<CustomObject>
    <description>Queue for Component Attribute Integration</description>
    <fields>
        <fullName>ActionType__c</fullName>
        <label>Action Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttributeId__c</fullName>
        <label>Attribute Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttributeType__c</fullName>
        <label>Attribute Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttributeValue__c</fullName>
        <label>Attribute Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComponentId__c</fullName>
        <label>Component Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Component_Attribute__c</fullName>
        <label>Component Attribute</label>
        <referenceTo>ComponentAttribute__c</referenceTo>
        <relationshipLabel>Component Attribute Integration</relationshipLabel>
        <relationshipName>Component_Attribute_Integration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LocalRecordId__c</fullName>
        <label>Local Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MessageResult__c</fullName>
        <label>Message Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <label>Reference</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Component Attribute Integration</label>
    <nameField>
        <displayFormat>CA{0000000000}</displayFormat>
        <label>MessageID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Component Attribute Integration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>